2000-06-25  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* Rotated old ChangeLog entries.
